--- a/index.html
+++ b/index.html
@@ -6,12 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Energy Visualization Web App</title>
+  <style>
+  ul {
+    font-family:"Verdana", sans-serif;
+    background-color:rgb(16, 230, 233);
+    color:white;
+    padding:8px 0;
+  }
+  li {
+    padding: 8px 20px;
+    display: inline;
+  }
+  li.active{
+    background-color: black;
+  }
+  </style>
 </head>
 
 <body>
   <main>
     <h1>Visualización Energética Web App</h1>
   </main>
+  <ul>
+    <li class="active">Home</li>
+    <li>Products</li>
+    <li>About</li>
+  </ul>
 </body>
 
 </html>
