--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js" integrity="sha512-SGWgwwRA8xZgEoKiex3UubkSkV1zSE1BS6O4pXcaxcNtUlQsOmOmhVnDwIvqGRfEmuz83tIGL13cXMZn6upPyg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +14,7 @@
     font-family:"Verdana", sans-serif;
     background-color:rgb(16, 230, 233);
     color:white;
-    padding:8px 0;
+    padding:10px 0;
   }
   li {
     padding: 8px 20px;
@@ -28,10 +31,61 @@
     <h1>Visualización Energética Web App</h1>
   </main>
   <ul>
-    <li class="active">Home</li>
-    <li>Products</li>
-    <li>About</li>
+    <li class="active">Inicio</li>
+    <li>Estudios</li>
+    <li>Información</li>
   </ul>
 </body>
+
+<form class="form-inline">
+	<div class="form-group">
+	  <label for="files">Upload a CSV formatted file:</label>
+	  <input type="file" id="files"  class="form-control" accept=".csv" required />
+	</div>
+	<div class="form-group">
+	 <button type="submit" id="submit-file" class="btn btn-primary">Upload File</button>
+	 </div>
+</form>
+
+function displayHTMLTable(results){
+	var table = "<table class='table'>";
+	var data = results.data;
+	 
+	for(i=0;i<data.length;i++){
+		table+= "<tr>";
+		var row = data[i];
+		var cells = row.join(",").split(",");
+		 
+		for(j=0;j<cells.length;j++){
+			table+= "<td>";
+			table+= cells[j];
+			table+= "</th>";
+		}
+		table+= "</tr>";
+	}
+	table+= "</table>";
+	$("#parsed_csv_list").html(table);
+}
+
+
+$('#files').parse({
+  config: {
+    delimiter: "",
+      header: false,
+    complete: displayHTMLTable,
+  },
+  before: function(file, inputElem)
+  {
+    //console.log("Parsing file...", file);
+  },
+  error: function(err, file)
+  {
+    //console.log("ERROR:", err, file);
+  },
+  complete: function()
+  {
+    //console.log("Done with all files");
+  }
+});
 
 </html>
