--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@ function displayHTMLTable(results){
 
 $('#files').parse({
   config: {
-    delimiter: "",
-      header: false,
+    delimiter: "auto",
     complete: displayHTMLTable,
   },
   before: function(file, inputElem)
@@ -87,5 +86,4 @@ $('#files').parse({
     //console.log("Done with all files");
   }
 });
-
 </html>
