--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     display: inline;
   }
   li.active{
-    background-color: black;
+    background-color: whitesmoke;
   }
   </style>
 </head>
@@ -39,7 +39,7 @@
 
 <form class="form-inline">
 	<div class="form-group">
-	  <label for="files">Upload a CSV formatted file:</label>
+	  <label for="files">Selecciona archivo .csv :</label>
 	  <input type="file" id="files"  class="form-control" accept=".csv" required />
 	</div>
 	<div class="form-group">
