--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   ul {
     font-family:"Verdana", sans-serif;
     background-color:rgb(16, 230, 233);
-    color:white;
+    color:black;
     padding:10px 0;
   }
   li {
@@ -35,17 +35,20 @@
     <li>Estudios</li>
     <li>Información</li>
   </ul>
+
+  <form class="form-inline">
+    <div class="form-group">
+      <label for="files">Selecciona archivo .csv :</label>
+      <input type="file" id="files"  class="form-control" accept=".csv" required />
+    </div>
+    <div class="form-group">
+     <button type="submit" id="submit-file" class="btn btn-primary">Upload File</button>
+     </div>
+  </form>
+  
 </body>
 
-<form class="form-inline">
-	<div class="form-group">
-	  <label for="files">Selecciona archivo .csv :</label>
-	  <input type="file" id="files"  class="form-control" accept=".csv" required />
-	</div>
-	<div class="form-group">
-	 <button type="submit" id="submit-file" class="btn btn-primary">Upload File</button>
-	 </div>
-</form>
+
 
 function displayHTMLTable(results){
 	var table = "<table class='table'>";
