--- a/index.html
+++ b/index.html
@@ -42,51 +42,57 @@
       <input type="file" id="files"  class="form-control" accept=".csv" required />
     </div>
     <div class="form-group">
-     <button type="submit" id="submit-file" class="btn btn-primary">Upload File</button>
-     </div>
+      <button type="submit" id="submit-file" class="btn btn-primary">Upload File</button>
+    </div>
   </form>
-  
-</body>
 
+  <script type="text/javascript">
+    $(document).ready(function(){
+    $('#header').load('../header-ads.html');
+    $('#footer').load('../footer-ads.html');
 
+    $('#submit-file').on("click",funtion(e){
+      e.preventDefault();
+      $('#files').parse({
+        config: {
+          delimiter: "auto",
+          complete: displayHTMLTable,
+        },
+        before: function(file, inputElem)
+        {
+          //console.log("Parsing file...", file);
+        },
+        error: function(err, file)
+        {
+          //console.log("ERROR:", err, file);
+        },
+        complete: function()
+        {
+          //console.log("Done with all files");
+        }
+      });
+    });
 
-function displayHTMLTable(results){
-	var table = "<table class='table'>";
-	var data = results.data;
-	 
-	for(i=0;i<data.length;i++){
-		table+= "<tr>";
-		var row = data[i];
-		var cells = row.join(",").split(",");
-		 
-		for(j=0;j<cells.length;j++){
-			table+= "<td>";
-			table+= cells[j];
-			table+= "</th>";
-		}
-		table+= "</tr>";
-	}
-	table+= "</table>";
-	$("#parsed_csv_list").html(table);
-}
-
-
-$('#files').parse({
-  config: {
-    delimiter: "auto",
-    complete: displayHTMLTable,
-  },
-  before: function(file, inputElem)
-  {
-    //console.log("Parsing file...", file);
-  },
-  error: function(err, file)
-  {
-    //console.log("ERROR:", err, file);
-  },
-  complete: function()
-  {
-    //console.log("Done with all files");
+    function displayHTMLTable(results){
+      var table = "<table class='table'>";
+      var data = results.data;
+     
+      for(i=0;i<data.length;i++){
+          table+= "<tr>";
+          var row = data[i];
+          var cells = row.join(",").split(",");
+       
+          for(j=0;j<cells.length;j++){
+              table+= "<td>";
+              table+= cells[j];
+              table+= "</th>";
+      }
+      table+= "</tr>";
+    }
+    table+= "</table>";
+    $("#parsed_csv_list").html(table);
   }
 });
+</script>
+</body>
 </html>
