--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js" integrity="sha512-SGWgwwRA8xZgEoKiex3UubkSkV1zSE1BS6O4pXcaxcNtUlQsOmOmhVnDwIvqGRfEmuz83tIGL13cXMZn6upPyg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Energy Visualization Web App</title>
   <style>
-  ul {
-    font-family:"Verdana", sans-serif;
-    background-color:rgb(16, 230, 233);
-    color:black;
-    padding:10px 0;
-  }
-  li {
-    padding: 8px 20px;
-    display: inline;
-  }
-  li.active{
-    background-color: whitesmoke;
-  }
+    .pdfobject-container {height:500px;}
+    .pdfobject {border: 1px solid #666;}
+    ul {
+      font-family:"Verdana", sans-serif;
+      background-color:rgb(16, 230, 233);
+      color:black;
+      padding:10px 0;
+    }
+    li {
+      padding: 8px 20px;
+      display: inline;
+    }
+    li.active{
+      background-color: whitesmoke;
+    }
   </style>
 </head>
 
@@ -36,15 +37,21 @@
     <li>Información</li>
   </ul>
 
-  <form class="form-inline">
-    <div class="form-group">
-      <label for="files">Selecciona archivo .csv :</label>
-      <input type="file" id="files"  class="form-control" accept=".csv" required />
+  <div class="well">
+    <div class="row">
+      <form class="form-inline">
+        <div class="form-group">
+          <label for="files">Selecciona archivo .csv :</label>
+          <input type="file" id="files"  class="form-control" accept=".csv" required />
+        </div>
+        <div class="form-group">
+          <button type="submit" id="submit-file" class="btn btn-primary">Upload File</button>
+        </div>
+      </form>
     </div>
-    <div class="form-group">
-      <button type="submit" id="submit-file" class="btn btn-primary">Upload File</button>
+    <div class="row" <div id="parsed_csv_list">
     </div>
-  </form>
+  </div>
 
   <script type="text/javascript">
     $(document).ready(function(){
