--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Harvard University Energy Consumption</title>
+    <title>Energy Consumption Visualization</title>
 
 
     <!-- ADD Libraries-->
