--- a/index.html
+++ b/index.html
@@ -85,12 +85,11 @@
 <div class="container" style="text-align :center">
 
     <div style="background-color: white; padding-bottom: 0px" class="navbar-fixed-top">
-        <h1>Visualizing Energy Consumption at Harvard University</h1>
+        <h1>Visualizing Energy Consumption</h1>
 
 
         <div class="row">
-            <p> The following visualization displays the energy consumption of 151 buildings
-                at Harvard. | <a href="#" id="Read_me" data-toggle="modal"
+            <p> La siguiente visualización muestra la generación Bruta por entidad federativa en México. | <a href="#" id="Read_me" data-toggle="modal"
                                  data-target="#readMeModal">Read me</a> |
                 <!--a href="#" id="disclaimer" data-toggle="modal"
                    data-target="#disclaimerModal">Disclaimer</a-->
@@ -106,9 +105,9 @@
                         <h4 class="modal-title" id="myModalLabel">Instructions</h4>
                     </div>
                     <div class="modal-body" align="left">
-                        Use the control bar to filter buildings and select energy type. <br>
-                        Select one building in the map or in the ranking chart. <br>
-                        Hover a label or chart title for more information.
+                        Usa la barra de control para filtrar estados y seleccionar el tipo de energía. <br>
+                        Seleccione un estado en el mapa o en el gráfico de clasificación.. <br>
+                        Pase el cursor sobre una etiqueta o título de gráfico para obtener más información.
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
