--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="container" style="text-align :center">
 
     <div style="background-color: white; padding-bottom: 0px" class="navbar-fixed-top">
-        <h1>Visualizing Energy Consumption</h1>
+        <h1>Sistema de Información Energético</h1>
 
 
         <div class="row">
@@ -137,7 +137,7 @@
 
             <form id="form_opt" class="form-inline">
 
-                <label id = "Show_buildings_with_data_of" class="control-label gray-tooltip">Show buildings with data of:</label>
+                <label id = "Show_buildings_with_data_of" class="control-label gray-tooltip">Tipo de proceso:</label>
                 <select id="building_opt" class="form-control selectWidth controls">
                     <option value="electric" selected>Electric</option>
                     <option value="chilled water">Chilled Water</option>
@@ -145,7 +145,7 @@
                     <option value="all">All Data</option>
                 </select>
 
-                <label id = "Select_energy_type" class="control-label gray-tooltip">Select energy type:</label>
+                <label id = "Select_energy_type" class="control-label gray-tooltip">Selecciona el tipo de energía:</label>
                 <select id="energy_opt" class="form-control selectWidth controls">
                     <option value="electric" selected>Electric</option>
                     <option value="chilled water">Chilled Water</option>
