--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!--Define some colors-->
     <script type='text/javascript' >
-        var electricColor = "green"; <!--"#ABDB25"-->
+        var electricColor = "green";
         var chilledWaterColor = "blue";
         var steamColor = "red";
         var allColor = "purple"
