--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 
         $('#Monthly_Energy_Use').tooltip({
             placement : 'top',
-            title: "Monthly enregy use of Year 2013."
+            title: "Monthly enregy use of Year 2021"
         });
 
         $('#Monthly_energy_use_vs').tooltip({
