funtion as a SEN zone

--- a/index.html
+++ b/index.html
@@ -152,18 +152,18 @@
                     <option value="steam">Steam</option>
                 </select>
 
-                <label id = "Filter_buildings_by_function" class="control-label gray-tooltip" >Filter buildings by function:</label>
+                <label id = "Filter_buildings_by_function" class="control-label gray-tooltip" >Filtrado por regiones del SEN:</label>
                 <select id="function_opt" class="form-control selectWidth controls">
                     <option value="all" selected>All</option>
-                    <option value="atheletics">Atheletics</option>
-                    <option value="dining service">Dining Service</option>
-                    <option value="dormitory">Dormitory</option>
-                    <option value="gym">Gym</option>
+                    <option value="Norte">Norte</option>
+                    <option value="Baja California">Baja California</option>
+                    <option value="Baja California Sur">Baja California Sur</option>
+                    <option value="Noroeste">Noroeste</option>
                     <option value="lab">Lab</option>
-                    <option value="lab and classroom">Lab and Classroom</option>
-                    <option value="library">Library</option>
-                    <option value="office">Office</option>
-                    <option value="office and classroom">Office and Classroom</option>
+                    <option value="Occidental">Occidental</option>
+                    <option value="Oriental">Oriental</option>
+                    <option value="Central">Central</option>
+                    <option value="Peninsular">Peninsular</option>
                     <option value="residence hall">Residence hall</option>
                     <option value="residential">Residential</option>
                 </select>
