--- a/index.html
+++ b/index.html
@@ -154,18 +154,15 @@
 
                 <label id = "Filter_buildings_by_function" class="control-label gray-tooltip" >Filtrado por regiones del SEN:</label>
                 <select id="function_opt" class="form-control selectWidth controls">
-                    <option value="all" selected>All</option>
+                    <option value="Todos los estados" selected>Todos los estados</option>
                     <option value="Norte">Norte</option>
                     <option value="Baja California">Baja California</option>
                     <option value="Baja California Sur">Baja California Sur</option>
                     <option value="Noroeste">Noroeste</option>
-                    <option value="lab">Lab</option>
                     <option value="Occidental">Occidental</option>
                     <option value="Oriental">Oriental</option>
                     <option value="Central">Central</option>
                     <option value="Peninsular">Peninsular</option>
-                    <option value="residence hall">Residence hall</option>
-                    <option value="residential">Residential</option>
                 </select>
 
             </form>
