--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                 <label id = "Filter_buildings_by_function" class="control-label gray-tooltip" >Filtrado por regiones del SEN:</label>
                 <select id="function_opt" class="form-control selectWidth controls">
-                    <option value="Todos los estados" selected>Todos los estados</option>
+                    <option value="All" selected>All</option>
                     <option value="Norte">Norte</option>
                     <option value="Baja California">Baja California</option>
                     <option value="Baja California Sur">Baja California Sur</option>
