--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
 
             <form id="form_opt" class="form-inline">
 
-                <label id = "Show_buildings_with_data_of" class="control-label gray-tooltip">Tipo de proceso:</label>
+                <label id = "Show_buildings_with_data_of" class="control-label gray-tooltip">Tipo de Información:</label>
                 <select id="building_opt" class="form-control selectWidth controls">
-                    <option value="electric" selected>Electric</option>
+                    <option value="electric" selected>Generación Bruta por Entidad Federativa</option>
                     <option value="chilled water">Chilled Water</option>
                     <option value="steam">Steam</option>
-                    <option value="all">All Data</option>
+                    <option value="all">Todos</option>
                 </select>
 
                 <label id = "Select_energy_type" class="control-label gray-tooltip">Selecciona el tipo de energía:</label>
