--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <div class="col-md-8" id="energyVis">
             <span id="Monthly_Energy_Use" class = "gray-tooltip">
-            <span >Monthly Energy Use - </span>
+            <span >Energía Mensual - </span>
             <span id="BuildingName" style="text-transform:capitalize">BuildingName</span>
             <span> - </span>
             <span id="EnergyType" style="text-transform:capitalize">>EnergyType</span>
@@ -539,7 +539,7 @@
 
         $('#Monthly_Energy_Use').tooltip({
             placement : 'top',
-            title: "Monthly enregy use of Year 2021"
+            title: "Energía Mensual en 2021"
         });
 
         $('#Monthly_energy_use_vs').tooltip({
