Try diferent energys

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <option value="cooling degrees" selected>cooling degrees</option>
                     <option value="heating degrees">heating degrees</option>
                     <option value="solar radiation">solar radiation</option>
-                    <option value="wind speed">wind speed</option>
+                    <option value="Total">Total</option>
                 </select>
             </form>
         </div>
