--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <label id = "Show_buildings_with_data_of" class="control-label gray-tooltip">Tipo de Información:</label>
                 <select id="building_opt" class="form-control selectWidth controls">
                     <option value="electric" selected>Generación Bruta por Entidad Federativa</option>
-                    <option value="chilled water">Chilled Water</option>
+                    <option value="chilled water">Capacidad por entidad federativa</option>
                     <option value="steam">Steam</option>
                     <option value="all">Todos</option>
                 </select>
