--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <div class="row">
         <nav>
             <ul class="pager">
-                <span id="Energy_Use_and_Weather" class = "controls subtitle gray-tooltip">Energy Use and Weather: </span>
+                <span id="Energy_Use_and_Weather" class = "controls subtitle gray-tooltip">Energía: </span>
                 <li><a href="#" onClick="SelectTab(1)">Grafica Básica</a></li>
                 <li><a href="#" onClick="SelectTab(2)">Grafica Explorativa</a></li>
             </ul>
