Change on bottoms

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 
                 <label id = "Select_energy_type" class="control-label gray-tooltip">Selecciona el tipo de energía:</label>
                 <select id="energy_opt" class="form-control selectWidth controls">
-                    <option value="electric" selected>Electric</option>
-                    <option value="chilled water">Chilled Water</option>
+                    <option value="electric" selected>Generación</option>
+                    <option value="chilled water">Capacidad</option>
                     <option value="steam">Steam</option>
                 </select>
 
