--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="libs/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="libs/queue/queue.v1.min.js"></script>
     <script async
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_SfhqfQajrVyTAYJCZwsAMevuBAODcdU&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_SfhqfQajrVyTAYJCZwsAMevuBAODcdU">
     </script>
 
     <!--Stylesheets-->
