change 188 line on index

--- a/index.html
+++ b/index.html
@@ -185,14 +185,11 @@
         </div>
     </div>
 
-    <div class="row" style="margin-top: 10px">
+    <div class="row" style="margin-top: 30px">
 
-        <div class="col-md-8" id="mapVis">
-        </div>
+        <div class="col-md-8" id="mapVis"> </div>
 
-        <div class="col-lg-4 col-md-4 content" id="rankVis">
-
-        </div>
+        <div class="col-lg-4 col-md-4 content" id="rankVis"> </div>
 
     </div>
 
