--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <script src="libs/jquery/jquery-2.1.1.min.js" charset="utf-8"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="libs/queue/queue.v1.min.js"></script>
-    <script async
+    <script type="text/javascript">
+            function initMap() {
+        //
+       }
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_SfhqfQajrVyTAYJCZwsAMevuBAODcdU&callback=initMap">
     </script>
 
