--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="libs/jquery/jquery-2.1.1.min.js" charset="utf-8"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="libs/queue/queue.v1.min.js"></script>
-    <script type="text/javascript">
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_SfhqfQajrVyTAYJCZwsAMevuBAODcdU&callback=initmap">
+    <script type="text/javascript"
+            src="https://maps.googleapis.com/maps/api/js">
     </script>
 
     <!--Stylesheets-->
