--- a/index.html
+++ b/index.html
@@ -10,18 +10,8 @@
     <script src="libs/jquery/jquery-2.1.1.min.js" charset="utf-8"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="libs/queue/queue.v1.min.js"></script>
-    <script>
-        let map;
-        function initMap() {
-            map = new google.maps.Map(document.getElementById("map"), {
-        center: { lat: -34.397, lng: 150.644 },
-        zoom: 8,
-     });
-}
-window.initMap = initMap;
-    </script>
     <script type="text/javascript"
-            src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB_SfhqfQajrVyTAYJCZwsAMevuBAODcdU&callback=initMap">
+            src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB_SfhqfQajrVyTAYJCZwsAMevuBAODcdU&callback=initVis">
     </script>
 
     <!--Stylesheets-->
