--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="libs/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="libs/queue/queue.v1.min.js"></script>
     <script type="text/javascript"
-            src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB_SfhqfQajrVyTAYJCZwsAMevuBAODcdU&callback=initVis">
+    src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB_SfhqfQajrVyTAYJCZwsAMevuBAODcdU&callback=initmapvis">
     </script>
 
     <!--Stylesheets-->
