Add data on Ciudad de Mexico

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <option value="office">Office</option>
                     <option value="office and classroom">Office and Classroom</option>
                     <option value="residence hall">Residence hall</option>
-                    <option value="residential">Residential</option>
+                    <option value="residential">Central</option>
                 </select>
 
             </form>
