--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <label id = "Filter_buildings_by_function" class="control-label gray-tooltip" >Filter buildings by function:</label>
                 <select id="function_opt" class="form-control selectWidth controls">
                     <option value="all" selected>All</option>
-                    <option value="atheletics">Atheletics</option>
+                    <option value="atheletics">Occidental</option>
                     <option value="dining service">Dining Service</option>
                     <option value="dormitory">Dormitory</option>
                     <option value="gym">Gym</option>
