--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="container" style="text-align :center">
 
     <div style="background-color: white; padding-bottom: 0px" class="navbar-fixed-top">
-        <h1>Visualizing Energy Consumption at Harvard University</h1>
+        <h1>Sistema de Información Energética</h1>
 
 
         <div class="row">
