change on visualization

--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
 
     <div class="row" style="margin-top: 165px">
 
-        <div class="col-md-8"><span id="Map" class = "gray-tooltip-right">Map</span></div>
+        <div class="col-md-8"><span id="Map" class = "gray-tooltip-right">Mapa de México</span></div>
         <div class="col-md-4">
             <form class="form-inline">
                 <span id="Annual_Energy_Ranking" class = "gray-tooltip-left">Ranking | </span>
-                <label id = "Sort_ranking_by" class="gray-tooltip">Sort by:</label>
+                <label id = "Sort_ranking_by" class="gray-tooltip">Filtrar por:</label>
                 <select id="rank_opt" class="form-control selectWidth controls input-sm">
-                    <option value="energyUse" selected>Energy use</option>
-                    <option value="buildingName">Building name</option>
+                    <option value="energyUse" selected>Uso de Energía</option>
+                    <option value="buildingName">Abecedario</option>
                 </select>
             </form>
         </div>
@@ -204,9 +204,9 @@
     <div class="row">
         <nav>
             <ul class="pager">
-                <span id="Energy_Use_and_Weather" class = "controls subtitle gray-tooltip">Energy Use and Weather: </span>
-                <li><a href="#" onClick="SelectTab(1)">Basic</a></li>
-                <li><a href="#" onClick="SelectTab(2)">Explorative</a></li>
+                <span id="Energy_Use_and_Weather" class = "controls subtitle gray-tooltip">Energía y Clima: </span>
+                <li><a href="#" onClick="SelectTab(1)">Basica</a></li>
+                <li><a href="#" onClick="SelectTab(2)">Explorativa</a></li>
             </ul>
         </nav>
     </div>
