--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <option value="all" selected>All</option>
                     <option value="atheletics">Occidental</option>
                     <option value="dining service">Dining Service</option>
-                    <option value="dormitory">Dormitory</option>
+                    <option value="dormitory">Noroeste</option>
                     <option value="gym">Gym</option>
                     <option value="lab">Lab</option>
                     <option value="lab and classroom">Lab and Classroom</option>
