--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <option value="dining service">Dining Service</option>
                     <option value="dormitory">Noroeste</option>
                     <option value="gym">Gym</option>
-                    <option value="lab">Lab</option>
+                    <option value="lab">Oriental</option>
                     <option value="lab and classroom">Lab and Classroom</option>
                     <option value="library">Library</option>
                     <option value="office">Office</option>
