--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <option value="gym">Gym</option>
                     <option value="lab">Oriental</option>
                     <option value="lab and classroom">Lab and Classroom</option>
-                    <option value="library">Library</option>
+                    <option value="library">Norte</option>
                     <option value="office">Office</option>
                     <option value="office and classroom">Office and Classroom</option>
                     <option value="residence hall">Residence hall</option>
