--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
 
                 <label id = "Filter_buildings_by_function" class="control-label gray-tooltip" >Filtrar por regiones del SEN:</label>
                 <select id="function_opt" class="form-control selectWidth controls">
-                    <option value="all" selected>All</option>
+                    <option value="all" selected>Todos</option>
                     <option value="atheletics">Occidental</option>
-                    <option value="dining service">Dining Service</option>
+                    <option value="dining service">Baja California</option>
                     <option value="dormitory">Noroeste</option>
-                    <option value="gym">Gym</option>
+                    <option value="gym">Baja California Sur</option>
                     <option value="lab">Oriental</option>
                     <option value="lab and classroom">Lab and Classroom</option>
                     <option value="library">Norte</option>
