--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <option value="lab">Oriental</option>
                     <option value="lab and classroom">Lab and Classroom</option>
                     <option value="library">Norte</option>
-                    <option value="office">Office</option>
+                    <option value="office">Peninsular</option>
                     <option value="office and classroom">Office and Classroom</option>
                     <option value="residence hall">Residence hall</option>
                     <option value="residential">Central</option>
