change on Puebla

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="col-md-8" id="explore1Vis">
             <form class="form-inline" style="text-transform:capitalize">
                 <span id="Monthly_energy_use_vs" class = "gray-tooltip">
-                <span id="buildingName_explore1Vis">Gund Hall</span>
+                <span id="buildingName_explore1Vis">Puebla</span>
                 <span> - Monthly energy use vs.</span>
                     </span>
                 <select id="explore1Vis_x_opt"  class="form-control selectWidth controls" style="text-transform:capitalize">
@@ -280,7 +280,7 @@
         placeTooltip();
 
         // variables keeping global knowledge of the data
-        var defaultBuilding = "Gund Hall";
+        var defaultBuilding = "Puebla";
         var monthlyEnergy = [];
         var weather = [];
         var option = {"buildingName": defaultBuilding, "buildingEnergyType": '', "energyType": '', "buildingFunction": '', "sortType": ''};
