--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
                 <label id = "Select_energy_type" class="control-label gray-tooltip">Selecciona el tipo de energía:</label>
                 <select id="energy_opt" class="form-control selectWidth controls">
                     <option value="electric" selected>Electric</option>
-                    <option value="chilled water">Chilled Water</option>
-                    <option value="steam">Steam</option>
+                    <option value="chilled water">Termoelectrica</option>
+                    <option value="steam">Eólica</option>
+                    <option value="Hidro">Hidroeléctrica</option>
                 </select>
 
                 <label id = "Filter_buildings_by_function" class="control-label gray-tooltip" >Filtrar por regiones del SEN:</label>
