--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 
                 <label id = "Show_buildings_with_data_of" class="control-label gray-tooltip">Tipo de información:</label>
                 <select id="building_opt" class="form-control selectWidth controls">
-                    <option value="electric" selected>Electric</option>
-                    <option value="chilled water">Chilled Water</option>
+                    <option value="electric" selected>Generación por Entidad federativa</option>
+                    <option value="chilled water">Capacidad por Entidad Federativa</option>
                     <option value="steam">Steam</option>
-                    <option value="all">All Data</option>
+                    <option value="all">Generación Bruta por Proceso en Puebla</option>
                 </select>
 
                 <label id = "Select_energy_type" class="control-label gray-tooltip">Selecciona el tipo de energía:</label>
