--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <label id = "Sort_ranking_by" class="gray-tooltip">Filtrar por:</label>
                 <select id="rank_opt" class="form-control selectWidth controls input-sm">
                     <option value="energyUse" selected>Uso de Energía</option>
-                    <option value="buildingName">Abecedario</option>
+                    <option value="buildingName">A-Z</option>
                 </select>
             </form>
         </div>
