cambio en energyvis para establecer año

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 
         $('#Energy_Use_and_Weather').tooltip({
             placement : 'top',
-            title: "Select a tab. Basic | Explorative"
+            title: "Selecciona el tipo de visualizacion Basica | Explorativa"
         });
 
         $('#Show_buildings_with_data_of').tooltip({
