Cambio en index nombres en grafica

--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
             <form class="form-inline" style="text-transform:capitalize">
                 <span id="Monthly_energy_use_vs" class = "gray-tooltip">
                 <span id="buildingName_explore1Vis">Puebla</span>
-                <span> - Monthly energy use vs.</span>
+                <span> - Energía mensual vs.</span>
                     </span>
                 <select id="explore1Vis_x_opt"  class="form-control selectWidth controls" style="text-transform:capitalize">
-                    <option value ="temperature" >temperature</option>
+                    <option value ="temperature" >Temperatura</option>
                     <option value ="dehumidification">dehumidification</option>
                     <option value="cooling degrees" selected>cooling degrees</option>
                     <option value="heating degrees">heating degrees</option>
