Cambio en index y weather DATASET

--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
                     </span>
                 <select id="explore1Vis_x_opt"  class="form-control selectWidth controls" style="text-transform:capitalize">
                     <option value ="temperature" >Temperatura</option>
-                    <option value ="dehumidification">dehumidification</option>
-                    <option value="cooling degrees" selected>cooling degrees</option>
-                    <option value="heating degrees">heating degrees</option>
-                    <option value="solar radiation">solar radiation</option>
-                    <option value="wind speed">wind speed</option>
+                    <option value ="dehumidification">Deshumidificación</option>
+                    <option value="cooling degrees" selected>Grados de enfriamiento</option>
+                    <option value="heating degrees">Grados de calentamientos</option>
+                    <option value="solar radiation">Radiación Solar</option>
+                    <option value="wind speed">Velocidad del aire</option>
                 </select>
             </form>
         </div>
