cambio de instrucciones de la palicacion en index

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
         <div class="col-md-8" id="energyVis">
             <span id="Monthly_Energy_Use" class = "gray-tooltip">
-            <span >Monthly Energy Use - </span>
+            <span >Energía Mensual - </span>
             <span id="BuildingName" style="text-transform:capitalize">BuildingName</span>
             <span> - </span>
             <span id="EnergyType" style="text-transform:capitalize">>EnergyType</span>
@@ -511,22 +511,22 @@
 
         $('#Show_buildings_with_data_of').tooltip({
             placement : 'bottom',
-            title: "Map and ranking bar chart will show the buildings with the selected energy type."
+            title: "Selecciona el tipo de información que necesites."
         });
 
         $('#Select_energy_type').tooltip({
             placement : 'bottom',
-            title: "Ranking, monthly energy use and explorative scatterplot will show the selected energy type."
+            title: "Al seleccionar el tipo de energía se mostrará la generación especifica del proceso seleccionado."
         });
 
         $('#Filter_buildings_by_function').tooltip({
             placement : 'bottom',
-            title: "Map and ranking bar chart will show the buildings of the selected type."
+            title: "Al seleccionar la filtración de datos por regiones del SEN podrás encontrar las 8 regiones interconectadas en el SEN"
         });
 
         $('#Sort_ranking_by').tooltip({
             placement : 'bottom',
-            title: "Sort ranking by energy use or building name"
+            title: "Filta los datos por orden de mayor o menor y orden alfabetico"
         });
 
         $('#Map').tooltip({
