cambio en index titulo

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
         <div class="row">
-            <p> La siguiente visualización muestra la generación Bruta por entidad federativa en México. | <a href="https://github.com/SCastillo14/Energy-Visualization/blob/main/readme.md" id="Read_me" data-toggle="modal"
+            <p> La siguiente visualización muestra la generacióny la capacidad de energía por entidad federativa en México. | <a href="https://github.com/SCastillo14/Energy-Visualization/blob/main/readme.md" id="Read_me" data-toggle="modal"
                                  data-target="#readMeModal">Read me</a> |
                 <!--a href="#" id="disclaimer" data-toggle="modal"
                    data-target="#disclaimerModal">Disclaimer</a-->
