cambio en instrucciones index

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 
 
         <div class="row">
-            <p> La siguiente visualización muestra la generacióny la capacidad de energía por entidad federativa en México. | <a href="https://github.com/SCastillo14/Energy-Visualization/blob/main/readme.md" id="Read_me" data-toggle="modal"
-                                 data-target="#readMeModal">Read me</a> |
+            <p> La siguiente visualización muestra la generacióny la capacidad de energía por entidad federativa en México. | <a href="#" id="Read_me" data-toggle="modal"
+                                 data-target="#readMeModal">Instrucciones</a> |
                 <!--a href="#" id="disclaimer" data-toggle="modal"
                    data-target="#disclaimerModal">Disclaimer</a-->
-                <!--<a href="https://youtu.be/AGnx9alurKk" target="_blank" id="Youtube_demo">Youtube demo</a>-->
+                <a href="https://github.com/SCastillo14/Energy-Visualization/blob/main/readme.md" target="_blank" id="Youtube_demo">Repositorio Github</a>-->
             </p>
         </div>
 
