--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                  data-target="#readMeModal">Instrucciones</a> |
                 <!--a href="#" id="disclaimer" data-toggle="modal"
                    data-target="#disclaimerModal">Disclaimer</a-->
-                <a href="https://github.com/SCastillo14/Energy-Visualization/blob/main/readme.md" target="_blank" id="Youtube_demo">Repositorio Github</a>-->
+                <a href="https://github.com/SCastillo14/Energy-Visualization/blob/main/readme.md" target="_blank" id="Youtube_demo">Repositorio Github</a>
             </p>
         </div>
 
