--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 
                 <label id = "Show_buildings_with_data_of" class="control-label gray-tooltip">Tipo de información:</label>
                 <select id="building_opt" class="form-control selectWidth controls">
-                    <option value="electric" selected>Generación por Entidad federativa</option>
-                    <option value="chilled water">Capacidad por Entidad Federativa</option>
+                    <option value="electric" selected>Generación</option>
+                    <option value="chilled water">Capacidad</option>
                     <option value="steam">Steam</option>
                     <option value="all">Generación Bruta por Proceso en Puebla</option>
                 </select>
@@ -149,7 +149,7 @@
                 <select id="energy_opt" class="form-control selectWidth controls">
                     <option value="electric" selected>Electric</option>
                     <option value="chilled water">Termoelectrica</option>
-                    <option value="steam">Eólica</option>
+                    <option value="Eoli">Eólica</option>
                     <option value="Hidro">Hidroeléctrica</option>
                 </select>
 
