DATASET porcentaje de electrificación

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <select id="building_opt" class="form-control selectWidth controls">
                     <option value="electric" selected>Generación</option>
                     <option value="chilled water">Capacidad</option>
-                    <option value="steam">Steam</option>
+                    <option value="steam">Porcentaje de Electrificación</option>
                     <option value="all">Generación Bruta por Proceso en Puebla</option>
                 </select>
 
