cambio en Index.html para incluir instrucciones

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
         $('#Map').tooltip({
             placement : 'right',
-            title: "Select a building to see its ranking and monthly energy use. Use the control above to filter buildings."
+            title: "Coloca el mouse en los puntos marcados en cada estado para vizualizar sus datos."
         });
 
         $('#Annual_Energy_Ranking').tooltip({
@@ -541,13 +541,13 @@
 
         $('#Monthly_Energy_Use').tooltip({
             placement : 'top',
-            title: "Monthly enregy use of Year 2013."
+            title: "Energía mensual del año 2020 a 2021."
         });
 
         $('#Monthly_energy_use_vs').tooltip({
             placement : 'top',
-            title:'Select a weather variable to explore the relationship between energy use and weather. ' +
-            'Use the control at the top to change energy use type.'
+            title:'Seleccione una variable climática para explorar la relación entre el uso de energía y el clima. ' +
+            'Use el control en la parte superior para cambiar el tipo de uso de energía.'
 
         });
 
