cambio en index instrucciones y cambios en weathervis titulos

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
         $('#Monthly_Energy_Use').tooltip({
             placement : 'top',
-            title: "Energía mensual del año 2020 a 2021."
+            title: "Energía mensual del año 2021."
         });
 
         $('#Monthly_energy_use_vs').tooltip({
