cambio de variables para vizualizacion

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <select id="energy_opt" class="form-control selectWidth controls">
                     <option value="electric" selected>Electric</option>
                     <option value="chilled water">Termoelectrica</option>
-                    <option value="Eoli">Eólica</option>
+                    <option value="steam">Eólica</option>
                     <option value="Hidro">Hidroeléctrica</option>
                 </select>
 
