--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Sistema de Información Energética</title>
 
 
-    <!-- ADD Libraries-->
+    <!-- Librerias -->
     <script src="libs/d3/d3.min.js" charset="utf-8"></script>
     <script src="libs/jquery/jquery-2.1.1.min.js" charset="utf-8"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
@@ -256,9 +256,7 @@
             <div align = "left" id = "explore1Equation"></div>
             <hr>
             <div align = "left">
-                The R2 coefficient of determination is a statistical measure of how well the regression
-                line approximates the real data points. An R2 of 1 indicates that the regression line perfectly fits
-                the data.
+                El coeficiente de determinación R2 es una medida estadística de qué tan bien la línea de regresión se aproxima a los puntos de datos reales. Un R2 de 1 indica que la línea de regresión se ajusta perfectamente a los datos.
                 <hr>
                 According to our observations, electric consumption does not have a strong linear relationship with weather.
                 Chilled water consumption is strongly correlated to cooling degrees, and steam to heating degrees. Read
