--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Sistema de Información Energética</title>
 
 
-    <!-- Librerias -->
+    <!-- Incoorporación de bibliotecas -->
     <script src="libs/d3/d3.min.js" charset="utf-8"></script>
     <script src="libs/jquery/jquery-2.1.1.min.js" charset="utf-8"></script>
     <script src="libs/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
