--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
 <div class="container" style="text-align :center">
 
-    <div style="background-color: white; padding-bottom: 0px" class="navbar-fixed-top">
+    <div style="background-color: rgba(255, 255, 255, 0.367); padding-bottom: 0px" class="navbar-fixed-top">
         <h1>Sistema de Información Energética</h1>
 
 
