Estudio de caso Puebla

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <option value="electric" selected>Generación</option>
                     <option value="chilled water">Capacidad</option>
                     <option value="steam">Porcentaje de Electrificación</option>
-                    <option value="all">Generación Bruta por Proceso en Puebla</option>
+                    <option value="all">Estado de Puebla</option>
                 </select>
 
                 <label id = "Select_energy_type" class="control-label gray-tooltip">Selecciona el tipo de energía:</label>
