cambio en index y energyvis HiDrO

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <option value="electric" selected>Electric</option>
                     <option value="chilled water">Termoelectrica</option>
                     <option value="steam">Eólica</option>
-                    <option value="Hidro">Hidroeléctrica</option>
+                    <option value="HiDrO">Hidroeléctrica</option>
                 </select>
 
                 <label id = "Filter_buildings_by_function" class="control-label gray-tooltip" >Filtrar por regiones del SEN:</label>
