cambio en index titulos

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                 <label id = "Select_energy_type" class="control-label gray-tooltip">Selecciona el tipo de energía:</label>
                 <select id="energy_opt" class="form-control selectWidth controls">
-                    <option value="electric" selected>Electric</option>
+                    <option value="electric" selected>Generación total</option>
                     <option value="chilled water">Termoelectrica</option>
                     <option value="steam">Eólica</option>
                     <option value="HiDrO">Hidroeléctrica</option>
