cambio de texto en index

--- a/index.html
+++ b/index.html
@@ -258,10 +258,9 @@
             <div align = "left">
                 El coeficiente de determinación R2 es una medida estadística de qué tan bien la línea de regresión se aproxima a los puntos de datos reales. Un R2 de 1 indica que la línea de regresión se ajusta perfectamente a los datos.
                 <hr>
-                According to our observations, electric consumption does not have a strong linear relationship with weather.
-                Chilled water consumption is strongly correlated to cooling degrees, and steam to heating degrees. Read
+                Según las observaciones realizadas en la inverstigación, el consumo eléctrico no tiene una fuerte relación lineal con el clima. El consumo de agua enfriada está fuertemente correlacionado con los grados de enfriamiento y el de vapor con los grados de calentamiento. Revisa el proyecto desarrollado aquí
                 <a href = "http://nbviewer.ipython.org/github/cs109-energy/cs109-energy.github.io/blob/master/iPython/Data%20Wrangling.ipynb" target="_blank">here</a>
-                for the definition of cooling and heating degrees.
+                para .
 
             </div>
         </div>
